--- a/funserver/index.html
+++ b/funserver/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>test</title></head>
 <body> 
-<img align="middle" src="test.jpg">
-Dave O'Hallaron
+<img align="middle" src="google.gif">
+chao pages
 </body>
 </html>
